batch read/write